# simple-translate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-flask  README.md  app.py  architecture.py  backend.py  create_tokenizer.py  dataset.py  dataset_splitter.py  flask_app.py  flavors.py  interfaces.py  launch_trainer.py  make_requirements_txt.sh  model_configs.py  pyproject.toml  pyproject_old.toml  schemas.py  simple_translate.py  train_tok.py  trainer.py  trainer_job.py  trainer_launch.py
.github/workflows/: build-and-push-image.yml
assets/: custom.css
data/: shuffle_split_csv.py
text_seeds/: abraham_lincoln.csv  george_washington.csv  john_f_kennedy.csv  ronald_reagan.csv  theodore_roosevelt.csv  thomas_jefferson.csv
tokenizer_0500/: tokenizer.json
tokenizer_1000/: tokenizer.json
tokenizer_2000/: tokenizer.json  tokenizer_config.json
