[tool.poetry]
name = "simple-translate"
version = "0.1.0"
description = ""
authors = ["Justin Pyron <justinpyron@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.1.3"
pandas = "^2.2.3"
torch = "^2.5.1"
streamlit = "^1.40.1"
jupyterlab = "^4.3.1"
ipykernel = "^6.29.5"
tokenizers = "^0.20.3"
click = "^8.1.7"
seaborn = "^0.13.2"
pre-commit = "^4.0.1"
transformers = "^4.46.3"
flask = "^3.1.0"
modal = "^1.2.4"
pydantic = "^2.12.5"
httpx = "^0.28.1"
fastapi = "^0.124.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
