[project]
name = "simple-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.1.0",
    "dash-bootstrap-components>=1.6.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
]

[dependency-groups]
dev = [
    "fastapi>=0.136.0",
    "ipykernel>=7.2.0",
    "modal>=1.4.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pre-commit>=4.5.1",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "wandb>=0.26.0",
]
